--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 	],
 	"parserOptions": {
 		"project": ["tsconfig.json"],
-		"ecmaVersion": 2020,
+		"ecmaVersion": "latest",
 		"sourceType": "module",
 		"ecmaFeatures": {
 			"jsx": true
@@ -26,7 +26,9 @@
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
-		"react/prop-types": "off"
+		"react/prop-types": "off",
+		"react/jsx-uses-react": "off",
+		"react/react-in-jsx-scope": "off"
 	},
 	"settings": {
 		"react": {
