--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint src/**/*.{ts,tsx} --quiet --fix"
 	},
 	"dependencies": {
+		"english-verbs-irregular": "^2.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.1"
