--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 		"noImplicitAny": false
 	},
 	"exclude": ["node_modules", "build"],
-	"include": ["./src", "webpack.config.ts"]
+	"include": ["./src", "webpack.config.ts", "src/*.ts", "src/*.tsx"]
 }
