change target to es5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"target": "ESNext",
+		"target": "es5",
 		"removeComments": true,
 		"allowSyntheticDefaultImports": true,
 		"jsx": "react-jsx",
