--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"react-router-dom": "^5.2.1"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.15.5",
+		"@babel/preset-env": "^7.15.4",
+		"@babel/preset-react": "^7.14.5",
 		"@types/node": "^16.7.10",
 		"@types/react": "^17.0.19",
 		"@types/react-dom": "^17.0.9",
@@ -24,6 +27,7 @@
 		"@types/webpack-dev-server": "^4.1.0",
 		"@typescript-eslint/eslint-plugin": "^4.30.0",
 		"@typescript-eslint/parser": "^4.30.0",
+		"babel-loader": "^8.2.2",
 		"css-loader": "^6.2.0",
 		"english-verbs-irregular": "^2.0.1",
 		"eslint": "^7.32.0",
