--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "webpack-cli serve --mode=development --env development --open --hot",
-		"build": "webpack --mode=production --env production --progress",
-		"lint": "eslint src/**/*.{ts,tsx} --quiet --fix"
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"start_old": "webpack-cli serve --mode=development --env development --open --hot",
+		"build_old": "webpack --mode=production --env production --progress",
+		"lint_old": "eslint src/**/*.{ts,tsx} --quiet --fix"
 	},
 	"dependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
-		"react-router-dom": "^5.2.1"
+		"react-router-dom": "^5.2.1",
+		"react-scripts": "^4.0.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.5",
