--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"start_old": "webpack-cli serve --mode=development --env development --open --hot",
-		"build_old": "webpack --mode=production --env production --progress",
-		"lint_old": "eslint src/**/*.{ts,tsx} --quiet --fix"
+		"start": "webpack-cli serve --mode=development --env development --open --hot",
+		"build": "webpack --mode=production --env production --progress",
+		"lint": "eslint src/**/*.{ts,tsx} --quiet --fix"
 	},
 	"dependencies": {
 		"react": "^17.0.2",
